included api folder for endpoints

--- a/Backend/package.json
+++ b/Backend/package.json
@@ -2,9 +2,9 @@
   "name": "backend",
   "version": "1.0.0",
   "description": "",
-  "main": "server.js",
+  "main": "api/contact.js",
   "scripts": {
-    "start": "node server.js",
+    "start": "node api/contact.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
