--- a/Backend/package.json
+++ b/Backend/package.json
@@ -5,8 +5,11 @@
   "main": "api/contact.js",
   "scripts": {
     "start": "node api/contact.js",
+    "build": "vite build",
+    "vercel-build": "npm run build" ,
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+
   "keywords": [],
   "author": "",
   "license": "ISC",
